fix height camera on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,6 @@ footer {
 @media (max-width: 576px) {
   video {
     width: 100%;
-    height: 100%;
+    height: 350px;
   }
 }
